--- a/privacy.html
+++ b/privacy.html
@@ -14,9 +14,9 @@
 		<div class="section">
 			<h1>Privacy Policy</h1> 
 			<p>
-				Mobile app Hive built the InstaCam app as
+				mobileapphive built the InstaCam app as
 				a Commercial app. This SERVICE is provided by
-				Mobile app Hive  and is intended for use as
+				mobileapphive and is intended for use as
 				is. This page is used to inform visitors regarding our
 				policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
 			</p> 
