--- a/InstaCam/privacy.html
+++ b/InstaCam/privacy.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Page Title</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width'>
 </head>
