--- a/index.html
+++ b/index.html
@@ -2,28 +2,22 @@
 <html>
 <head>
 	<title>Page Title</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width'>
 </head>
 <body>
 	<div class='website-header'><p>mobileapphive</p></div>
-	<div class='app-name'><h1>InstaCam: Record in One Tap</h1></div>
-	<p id='app-intro'><strong>InstaCam is an iOS application that lets you take video immediately upon launching the application with a camera similar to Instagram. It is also integrated with Instagram so the user can immediately trim and upload the video to Instagram stories. By adding the InstaCam widget, taking a video and sharing in social media is just a few tap away.</strong></p>
-
-	<div class='screenshots'>
-		<img src="resource/screenshot_1.jpg" width="200">
-		<img src="resource/screenshot_2.jpg" width="200">
-		<img src="resource/screenshot_3.jpg" width="200">
-		<img src="resource/screenshot_4.jpg" width="200">
+	<div class='apps'>
+		<a href='Instacam/index.html'>
+			<div class='Instacam'>
+				<img src="resource/icon_instacam.png" width="100">
+				<p>Instacam</p>
+			</div>
+		</a>
 	</div>
-	<div class="link">
-		<img src="resource/download_on_appstore.jpg" width="200">
-	</div>
-	<div class="info">
-		<a href="privacy.html">Privacy Policy</a>
+	<div class='info'>
 		<a href="mailto: support@mobileapphive.com">Contact Us</a>	
 	</div>
-	
 </body>
 </html>
