--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 	<div class='website-header'><p>mobileapphive</p></div>
 	<div class='apps'>
-		<a href='Instacam/index.html'>
+		<a href='InstaCam/index.html'>
 			<div class='Instacam'>
 				<img src="resource/icon_instacam.png" width="100">
-				<p>Instacam</p>
+				<p>InstaCam</p>
 			</div>
 		</a>
 	</div>
