change title and put link on logo

--- a/InstaCam/index.html
+++ b/InstaCam/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Page Title</title>
+	<title>InstaCam</title>
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width'>
 </head>
 <body>
-	<div class='website-header'><p>mobileapphive</p></div>
+	<div class='website-header'><a href="/index.html"><p>mobileapphive</p></a></div>
 	<div class='app-name'><h1>InstaCam: Record in One Tap</h1></div>
 	<p id='app-intro'><strong>InstaCam is an iOS application that lets you take video immediately upon launching the application with a camera similar to Instagram. It is also integrated with Instagram so the user can immediately trim and upload the video to Instagram stories. By adding the InstaCam widget, taking a video and sharing in social media is just a few tap away.</strong></p>
 
