--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Page Title</title>
+	<title>mobileapphive</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width'>
 </head>
 <body>
-	<div class='website-header'><p>mobileapphive</p></div>
+	<div class='website-header'><a href="/index.html"><p>mobileapphive</p></a></div>
 	<div class='apps'>
 		<a href='InstaCam/index.html'>
 			<div class='Instacam'>
